
1 Oct 2009
1. Renamed 'fp' script to 'start_fontypython' - had to edit a bunch of files. 
1.1 It turns out that fonty has been running without the segfault catcher all along. This should be remedied as of now. Backported fix to 0.4.2.x as well.
2. Taking-over the maintenance of the man page. I will leave it in the root of the tarball and Kartik will deal with it from there. Backported to 0.4.2.x

2 Oct
1. Spot changes. Made label above font views look better.
2. Started adding threading so that Fonty can spawn gucharmap or kfontview on a given fitmap in the view.

3 Oct
1. Fixed a bug in Delete Pogs -- reported by Michael Hoeft. Backported to 0.4.2.2 as well.
2. Adding an 'Voodoo' tab to Settings dialogue to house the charmap choice and the font adjustment checkbox. Wired it all up and it works!

4 Oct
1. Built a button to spawn the character-map app. Nice rollover and all.
2. Updated the help.
3. Created three buttons Bold, Italic and Regular for quick filtering.
4. Updated man page

5 Oct
1. Segfault dialogue suddenly started causing segfaults of its own... Sheesh. I had to remove a box sizer to get it to work.
2. Fixed bug in character map viewer code.
3. Small repair to BIR toggles.


11 Oct
1. Fixed a config startup bug - whatever charmaps are found, the first in the list is now taken as the default else None.
2. Made the default size 800x600 with left sash 200.
3. Made custom icons for the dir control.
4. New screenshot for the help file.
5. Tweaked zip name to xxxx.fonts.zip so it's obvious what it contains.
6. Adding the design files (Inkscape stuff) to the trunk so that others can use them.
7. "fixed" another wee bug in charmap default choice.I hope...

12 Oct
1. Made a new module to better deal with the charmap viewer wiring.
2. Removed the bitmap toggle buttons for B I R : they sucked. Normal toggle buttons will be used until wxpython can get bitmap buttons right.