@@ -7,7 +7,9 @@ fontypython \- Find, view and manage font files of all kinds.
 .SH DESCRIPTION
 .B fontypython
 is a GUI utility written in Python and WxPython that will help you do font stuff on GNU/Linux system. 
-You can quickly view and filter arbitrary* TTF, TTC, OTF or Type1 font files and then gather them together into 'Pogs' which can be installed or removed as needed. In this way you control which fonts are installed on a per-project basis.
+You can quickly view and filter arbitrary* TTF, TTC, OTF or Type1 font files and then gather them together into 'Pogs' which can be
+.B installed or removed
+as needed. In this way you control which fonts are installed on a per-project basis.
 
 If you have 
 .B gucharmap
@@ -15,7 +17,9 @@ or
 .B kfontview
 installed, (there is an option in Settings to choose which one) you can view any font's character maps etc.
 
-*Arbitrary means you can use 
+*Arbitrary means you can 
+.B see
+and/or use 
 .B any fonts
 in a local directory (or a mount). They 
 .B do not need
@@ -45,11 +49,7 @@ Install the fonts in this Pog to your fonts folder.
 Uninstall the fonts in this Pog.
 .TP
 \fB\-p\fR Pog, \fB\-\-purge\fR=\fIPog\fR
-Purge the Pog of ttf files that are no longer really there.
-.TP
-\fB\-t\fR "text", \fB\-\-text\fR=\fI"text"\fR
-Set a new default sample text. Eg, "This is an ex-parrot".
-Be sure to use the quotes.
+Purge the Pog of font files that are no longer really there.
 .TP
 \fB\-s\fR num, \fB\-\-size\fR=\fInum\fR
 Set a new default point size.
