@@ -197,3 +197,8 @@ Strings changed -- PO files will be broken :(
 12 Oct
 1. Made a new module to better deal with the charmap viewer wiring.
 2. Removed the bitmap toggle buttons for B I R : they sucked. Normal toggle buttons will be used until wxpython can get bitmap buttons right.
+
+13 Oct
+1. Removed the -t --text= comand-line option. It was totally useless.
+2. Fixed the strings.py file to reflect 1.
+3. Fixed the man page too.
